<resources>
    <string name="app_name">SzokerMobil</string>
    <string name="szolgkeresLB">Szolgáltatás Kereső</string>
    <string name="reg">Button</string>
    <string name="login">Button</string>

    <string name="loginTextview">Szakmunkás belépési felület</string>
    <string name="login_button">Belépés</string>
    <string name="loginfelhasznalo">Felhasználó</string>
    <string name="loginJelszo">Jelszó</string>
    <string name="regisztralas">Regisztrálok</string>
    <string name="bejelentkezes">Bejelentkezek</string>
    <string name="welcomeText">Üdvözöljük a szolgáltatás keresőben! Kérem válasszon az alábbi opciók közül:</string>
    <string name="register">Regisztráció</string>
    <string name="fullname">Név</string>
    <string name="email">E-mail</string>
    <string name="password">Jelszó</string>
    <string name="username">Felhasználónév</string>
    <string name="szakmunkas_checkbox">Szakmunkásként regisztrálok</string>
    <string name="loginEmail">E-mail cím</string>
    <string name="szakmunkasokTextView">Szakmunkások felülete</string>
    <string name="megrendelokTextView">Megrendelők felülete</string>
    <string name="registor_lokacio">Lokáció</string>
    <string name="register_telszam">Telefonszám</string>
    <string name="textview_loginUtvalaszto">Válassza ki kérem, hogy miként szeretne belépni!</string>
</resources>